Support single video inference

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ split_before_expression_after_opening_paren = true
 [isort]
 line_length = 90
 multi_line_output = 0
-known_third_party = clip,ffmpeg,nncore,numpy,sklearn,torch,torchvision
+known_third_party = clip,decord,ffmpeg,nncore,numpy,sklearn,torch,torchvision
 no_lines_before = STDLIB,LOCALFOLDER
 default_section = FIRSTPARTY
 
